k8s/product-service-service.yaml
# Service to expose product-service inside/outside cluster.
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: devops-demo
  labels:
    app: product-service
spec:
  type: LoadBalancer
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: 5001
